# prontivus-backend

./: .env  DATABASE_ARCHITECTURE.md  DATABASE_SCHEMA.md  DUAL_DATABASE_SETUP.md  env.example  main.py  prontivus_offline.db  pyproject.toml  render.yaml  requirements.txt  run_server.py  unified_db_init.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/dependencies/: auth.py
app/api/v1/endpoints/: appointments.py  auth.py  auth_db.py  auth_db_only.py  database.py  doctors.py  documents.py  financial.py  licenses.py  medical_records.py  notifications.py  patient_auth.py  patient_calls.py  patients.py  prescriptions.py  secretary.py  secretary_simple.py  units.py  users.py
app/core/: config.py  exceptions.py  performance.py
app/database/: database.py  migrations.py
app/models/: __init__.py  appointment.py  audit.py  base.py  financial.py  license.py  medical_record.py  patient.py  prescription.py  secretary.py  tenant.py  user.py
app/schemas/: appointment.py  auth.py  financial.py  license.py  medical_record.py  patient.py  secretary.py  secretary_enums.py  user.py
app/services/: appointment_service.py  auth_service.py  auth_service_db.py  change_tracking_service.py  database_monitor.py  license_service.py  medical_record_service.py  offline_service.py  patient_call_service.py  patient_service.py  pdf_service.py  startup_service.py  sync_service.py  user_service.py
app/utils/: database_compat.py  validation.py
