[tool.poetry]
name = "prontivus-backend-2"
version = "0.1.0"
description = ""
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-decouple = "3.8"
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
asyncpg = "0.29.0"
cryptography = "41.0.7"
pyotp = "2.9.0"
qrcode = {extras = ["pil"], version = "7.4.2"}
httpx = "0.25.2"
requests = "2.31.0"
aiofiles = "23.2.1"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
email-validator = "2.1.0"
celery = "5.3.4"
redis = "5.0.1"
structlog = "23.2.0"
sentry-sdk = {extras = ["fastapi"], version = "1.38.0"}
python-dateutil = "2.8.2"
pytz = "2023.3"
reportlab = "4.0.7"
phonenumbers = "9.0.14"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
black = "23.11.0"
isort = "5.12.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 